// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper.vue renders correctly has expected UI initially 1`] = `
<div class="stepper-container column">
  <div class="step-container FS current enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Do you know which license you need?
      </h5>
    </div>
    <firststep-stub stepid="0" status="current"></firststep-stub>
    <nav class="step-navigation">
      <!----> <a role="button" class="pagination-next disabled">NEXT STEP</a></nav>
  </div>
  <div class="step-container BY inactive enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Attribution
      </h5>
    </div>
    <!---->
    <!---->
  </div>
  <div class="step-container NC inactive enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Commercial Use
      </h5>
    </div>
    <!---->
    <!---->
  </div>
  <div class="step-container ND inactive enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Derivative Works
      </h5>
    </div>
    <!---->
    <!---->
  </div>
  <div class="step-container SA inactive enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Sharing Requirements
      </h5>
    </div>
    <!---->
    <!---->
  </div>
  <div class="step-container AD inactive enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Attribution Details
      </h5>
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Stepper.vue renders correctly has expected UI on CW step after DD 1`] = `
<div class="stepper-container column">
  <div class="step-container FS previous enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        License Expertise
      </h5>
    </div>
    <firststep-stub stepid="0" status="previous" selected="true"></firststep-stub>
    <!---->
  </div>
  <div class="step-container DD previous enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Creative Commons License
      </h5>
    </div>
    <dropdownstep-stub status="previous" stepid="5"></dropdownstep-stub>
    <!---->
  </div>
  <div class="step-container CW current enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Waive Your Copyright
      </h5>
    </div>
    <copyrightwaiverstep-stub stepid="6" stepname="CW" status="current"></copyrightwaiverstep-stub>
    <nav class="step-navigation"><a role="button" class="pagination-previous">BACK</a> <a role="button" class="pagination-next disabled">NEXT STEP</a></nav>
  </div>
  <div class="step-container AD inactive enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Attribution Details
      </h5>
    </div>
    <!---->
    <!---->
  </div>
</div>
`;

exports[`Stepper.vue renders correctly has expected UI on ND step 1`] = `
<div class="stepper-container column">
  <div class="step-container FS previous enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        License Expertise
      </h5>
    </div>
    <firststep-stub stepid="0" status="previous"></firststep-stub>
    <!---->
  </div>
  <div class="step-container BY previous enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Attribution
      </h5>
    </div>
    <step-stub stepname="BY" stepid="1" status="previous" enabled="true" selected="true"></step-stub>
    <!---->
  </div>
  <div class="step-container NC previous enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Commercial Use
      </h5>
    </div>
    <step-stub stepname="NC" stepid="2" status="previous" reversed="true" enabled="true"></step-stub>
    <!---->
  </div>
  <div class="step-container ND current enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Do you want to allow others to remix, adapt, or build upon your work?
      </h5>
    </div>
    <step-stub stepname="ND" stepid="3" status="current" reversed="true" enabled="true"></step-stub>
    <nav class="step-navigation"><a role="button" class="pagination-previous">BACK</a> <a role="button" class="pagination-next disabled">NEXT STEP</a></nav>
  </div>
  <div class="step-container SA inactive enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Sharing Requirements
      </h5>
    </div>
    <!---->
    <!---->
  </div>
  <div class="step-container AD inactive enabled">
    <div class="step-header">
      <h5 class="step-title vocab b-header">
        Attribution Details
      </h5>
    </div>
    <!---->
    <!---->
  </div>
</div>
`;
